--- a/UKpracaApp/templates/UKpracaApp/index.html
+++ b/UKpracaApp/templates/UKpracaApp/index.html
@@ -17,6 +17,8 @@
 </head>
 <body class="bg-light">
 
+    <form method="POST" action="">
+    {% csrf_token %}
 <div>
 
 
@@ -30,13 +32,31 @@
         Nazwisko:
         <input type="text"
                name="userSurname">
+</form>
+    </label>
+
+    <label>
+        <input type="submit" value="Wyślij">
 
     </label>
 
     <label>
-        <input type="submit" value="Wyślij"
-
+  <select name="gender">
+    <option value="">Select...</option>
+    <option value="M">Male</option>
+    <option value="F">Female</option>
+  </select>
     </label>
+
+    <label>
+    Wybierz dodatki:
+    <input type="checkbox" name="toppings" value="cheese">Dodatkowy ser
+    <input type="checkbox" name="toppings" value="ham">Dodatkowa szynka
+    <input type="checkbox" name="toppings" value="pineaple">Ananas
+    <input type="checkbox" name="toppings" value="tomato">Pomidor
+    <input type="checkbox" name="toppings" value="salami">Salami
+    </label>
+
 
 
 </div>
