--- a/UKpracaApp/templates/UKpracaApp/home.html
+++ b/UKpracaApp/templates/UKpracaApp/home.html
@@ -1,9 +1,7 @@
 {% extends 'UKpracaApp/base.html' %}
 {% load static %}
 
-
 {% block tittle %} View List {% endblock %}
-
 {% block content %}
 
 <!DOCTYPE html>
@@ -11,25 +9,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 
 </head>
 <body>
 
 
-<h1>
+<h2>
 
-    UKpraca - Ogłoszenia pracy <br>
-    Witajcie
+    Ogłoszenia dla pracowników z Ukrainy <br>
+                Pryvit
 
-</h1>
-
-<p style="color:green";">
-Strona główna
-
-
-</p>
-
+</h2>
 
 
 </body>
