--- a/UKpracaApp/templates/UKpracaApp/base.html
+++ b/UKpracaApp/templates/UKpracaApp/base.html
@@ -5,56 +5,44 @@
 <head>
 
 
-<style>
-
-h1 {
-border: 2px solid blue;
-font-family: "Lucida Console", "Courier New", monospace;
-color: powderblue;
-text-align: center;
 
 
-}
-
-
-</style>
-
-    <link rel="stylesheet href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 
 
 
         <style type="text/css">
-        .sidenav {
-            height:100%;
-            width:170px;
-            position: fixed;
-            z-index:1;
-            top:0;
-            left:0;
-            background-color:#111;
-            overflow-x: :hidden;
-            padding-top:20px;
+<!--        .sidenav {-->
+<!--            height:100%;-->
+<!--            width:170px;-->
+<!--            position: fixed;-->
+<!--            z-index:1;-->
+<!--            top:0;-->
+<!--            left:0;-->
+<!--            background-color:#111;-->
+<!--            overflow-x: :hidden;-->
+<!--            padding-top:20px;-->
 
-        }
+<!--        }-->
 
-        .sidenav a {
-            padding:6px 8px 6px 16px;
-            text-decoration: none;
-            font-size:20px;
-            color: red;
-            display:block;
-            font-family: "Lucida Console", "Courier New", monospace;
+<!--        .sidenav a {-->
+<!--            padding:6px 8px 6px 16px;-->
+<!--            text-decoration: none;-->
+<!--            font-size:20px;-->
+<!--            color: red;-->
+<!--            display:block;-->
+<!--            font-family: "Lucida Console", "Courier New", monospace;-->
 
-        }
+<!--        }-->
 
-        .sidenav a:hover{
-            color:#f1f1f1;
-        }
+<!--        .sidenav a:hover{-->
+<!--            color:#f1f1f1;-->
+<!--        }-->
 
-        .main{
-        margin-left:160px;
-        padding: 0px 10px;
-        }
+<!--        .main{-->
+<!--        margin-left:160px;-->
+<!--        padding: 0px 10px;-->
+<!--        }-->
 
 
 
@@ -84,7 +72,7 @@ text-align: center;
             <a href="/home"> Strona główna </a>
             <a href="/list"> Utwórz zgłoszenie </a>
             <a href="/contact"> Kontakt </a>
-            <h1>StylIKlasa</h1>
+
 
         </div>
 
