--- a/UKpracaApp/templates/UKpracaApp/contact.html
+++ b/UKpracaApp/templates/UKpracaApp/contact.html
@@ -11,7 +11,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet href="styles.css">
+    <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
 
