--- a/UKpracaApp/templates/UKpracaApp/index.html
+++ b/UKpracaApp/templates/UKpracaApp/index.html
@@ -12,14 +12,14 @@
 
 
 
-<link rel="stylesheet href="styles.css">
+<link rel="stylesheet" href="/static/styles.css">
 
 </head>
 
 
 
 
-<body class="bg-light">
+<body>
 
     <form method="POST" action="/list/">
         {% csrf_token %}
