CRUD project Contact site upgrade

--- a/UKpracaApp/templates/UKpracaApp/contact.html
+++ b/UKpracaApp/templates/UKpracaApp/contact.html
@@ -18,6 +18,30 @@
 <h1> Email: kontaktowy@wp.pl</h1>
 <p> Numer: 45-456-456 </p>
 
+<label>
+        Imię:
+        <input type="text"
+               name="mailerName">
+    </label>
+<br>
+    <label>
+        Twój Email:
+        <input type="email"
+               name="mailerEmail">
+    </label>
+<br>
+        <label>
+        Temat:
+        <input type="text"
+               name="mailerSubject">
+    </label>
+<br>
+        <label>
+        Wiadomość:
+        <input type="text"
+               name="mailerMessage">
+    </label>
+
 
 
 </body>
