--- a/UKpracaApp/templates/UKpracaApp/home.html
+++ b/UKpracaApp/templates/UKpracaApp/home.html
@@ -14,15 +14,15 @@
 </head>
 <body>
 
-
-<h2>
+<div>
+    <h2>
 
     Ogłoszenia dla pracowników z Ukrainy <br>
                 Pryvit
 
-</h2>
+    </h2>
 
-
+</div>
 </body>
 </html>
 
