Read funcionality added to CRUD project - 2/4

--- a/UKpracaApp/static/styles.css
+++ b/UKpracaApp/static/styles.css
@@ -16,9 +16,9 @@ text-align: center;
 }
 
 h2 {
-border: 10px solid blue;
+border: 2px solid blue;
 font-family: "Lucida Console", "Courier New", monospace;
-color: blue;
+color: red;
 text-align: center;
 
 
